--- a/app/src/main/res/layout/activity_android_character.xml
+++ b/app/src/main/res/layout/activity_android_character.xml
@@ -14,6 +14,27 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:id="@+id/head_container"
+        android:scaleType="centerInside"/>
+
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:id="@+id/body_container"
+        android:scaleType="centerInside"/>
+
+
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:id="@+id/leg_container"
+        android:scaleType="centerInside"/>
+
 </LinearLayout>
 
 </ScrollView>
